Fixed checkbox visibility issue with RemUI form styles

--- a/formbuilderjs/src/sass/components/_setting-wrap.scss
+++ b/formbuilderjs/src/sass/components/_setting-wrap.scss
@@ -5,7 +5,7 @@
     border: 1px solid #ccc;
     border-radius: 0.3em;
     margin: 1%;
-    background-color: rgba(0,0,0,0.05);
+    background-color: rgba(0, 0, 0, 0.05);
     color: black;
     user-select: none;
     label {
@@ -43,8 +43,8 @@
                 width: 16%;
             }
             &.toggle-group {
-                display: none;
-                + label {
+                display: none !important;
+                +label {
                     cursor: pointer;
                     text-indent: -9999px;
                     width: 40px;
@@ -55,8 +55,7 @@
                     margin-top: .5em;
                     margin-bottom: 0;
                 }
-
-                + label:after {
+                +label:after {
                     content: '';
                     position: absolute;
                     top: 5px;
@@ -67,12 +66,10 @@
                     border-radius: 90px;
                     transition: 0.3s;
                 }
-
-                &:not(:checked) + label {
+                &:not(:checked)+label {
                     background: grey !important;
                 }
-
-                &:checked + label:after {
+                &:checked+label:after {
                     left: calc(100% - 5px);
                     transform: translateX(-100%);
                 }
